[tool.poetry]
name = "auburn-city-zonings-identifier"
version = "0.1.0"
description = ""
authors = ["David Peterson <34923485+Haste171@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
